--- a/glide.yaml
+++ b/glide.yaml
@@ -99,6 +99,6 @@ import:
 - package: github.com/hashicorp/go-multierror
   version: v1.0.0
 - package: github.com/google/go-cmp
-  version: v0.4.0
+  version: ~0.4.0
 - package: github.com/mitchellh/go-homedir
-  version: v1.1.0
+  version: ~1.1.0
