Add functions to generate Tekton task objects
- Added functions and test cases to create
1) deploy-from-source-task
2) deploy-using-kubectl-task
3) github-status-task

Co-Authored-By: Gagan Hegde <ghegde@redhat.com>

--- a/glide.yaml
+++ b/glide.yaml
@@ -27,6 +27,8 @@ import:
 - package: k8s.io/apimachinery
   version: origin-4.4-kubernetes-1.17.1
   repo: https://github.com/openshift/kubernetes-apimachinery.git
+  subpackages:
+  - pkg/apis/meta/v1
 - package: k8s.io/api
   version: origin-4.4-kubernetes-1.17.1
   repo: https://github.com/openshift/kubernetes-api.git
