--- a/.travis.yml
+++ b/.travis.yml
@@ -119,6 +119,7 @@ jobs:
         - travis_wait make test-cmd-devfile-catalog
         - travis_wait make test-cmd-devfile-create
         - travis_wait make test-cmd-devfile-push
+        - travis_wait make test-cmd-devfile-watch
         - odo logout
 
     - <<: *base-test
