Update devfile integration tests for mandatory devrun
Signed-off-by: Maysun J Faisal <maysun.j.faisal@ibm.com>

--- a/tests/examples/source/devfiles/nodejs/devfile-no-endpoints.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-no-endpoints.yaml
@@ -17,7 +17,7 @@ commands:
         component: runtime
         command: "npm install"
   -
-    name: run
+    name: devrun
     actions:
       -
         type: exec
