--- a/tests/examples/source/devfiles/nodejs/devfile.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile.yaml
@@ -19,7 +19,7 @@ commands:
       - type: exec
         component: runtime
         command: "npm install"
-  - name: run
+  - name: devrun
     actions:
       - type: exec
         component: runtime
