--- a/tests/examples/source/devfiles/nodejs-multicontainer/devfile.yaml
+++ b/tests/examples/source/devfiles/nodejs-multicontainer/devfile.yaml
@@ -20,7 +20,7 @@ commands:
         component: runtime
         command: "npm install"
   -
-    name: run
+    name: devrun
     actions:
       -
         type: exec
