Odo url Ingress support (#2762)
* able to create env folder and file

Signed-off-by: Stephanie <stephanie.cao@ibm.com>

* WIP-migrated from poc branch, still need to fix context

Signed-off-by: Stephanie <stephanie.cao@ibm.com>

* wip-fix some issues blocking normal odo url create

Signed-off-by: Stephanie <stephanie.cao@ibm.com>

* small modification on deleteURL, currently blocked by service

Signed-off-by: Stephanie <stephanie.cao@ibm.com>

* able to create service using first container port

Signed-off-by: Stephanie <stephanie.cao@ibm.com>

* move serviceSpec creation to generator.go

Signed-off-by: Stephanie <stephanie.cao@ibm.com>

* add service test

Signed-off-by: Stephanie <stephanie.cao@ibm.com>

* sanitize the port name

Signed-off-by: Stephanie <stephanie.cao@ibm.com>

* add secret and port check

Signed-off-by: Stephanie <stephanie.cao@ibm.com>

* add unit tests for added functions

Signed-off-by: Stephanie <stephanie.cao@ibm.com>

* add make

* able to delete url from env.yaml

Signed-off-by: Stephanie <stephanie.cao@ibm.com>

* raname tls-secret and host, make url delete works

* add intergation test for url. still need to work on intergation tests

Signed-off-by: Stephanie <stephanie.cao@ibm.com>

* finish integration tests

Signed-off-by: Stephanie <stephanie.cao@ibm.com>

* format secrets_test

Signed-off-by: Stephanie <stephanie.cao@ibm.com>

* fix unit test

Signed-off-by: Stephanie <stephanie.cao@ibm.com>

* fix unittest failure

Signed-off-by: Stephanie <stephanie.cao@ibm.com>

* fix indentation

Signed-off-by: Stephanie <stephanie.cao@ibm.com>

* update the code based on comments

Signed-off-by: Stephanie <stephanie.cao@ibm.com>

* fix build failure

Signed-off-by: Stephanie <stephanie.cao@ibm.com>

* fix failure

Signed-off-by: Stephanie <stephanie.cao@ibm.com>

* avoid calling list multiple times

Signed-off-by: Stephanie <stephanie.cao@ibm.com>

* modify based on comments

Signed-off-by: Stephanie <stephanie.cao@ibm.com>

* fix test failure

--- a/.travis.yml
+++ b/.travis.yml
@@ -86,6 +86,7 @@ jobs:
         - odo login -u developer
         - travis_wait make test-cmd-pref-config
         - travis_wait make test-cmd-url
+        - travis_wait make test-cmd-devfile-url
         - travis_wait make test-cmd-debug
         - odo logout
 
