--- a/tests/examples/source/devfiles/nodejs/devfile-without-devbuild.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-without-devbuild.yaml
@@ -1,11 +1,17 @@
 apiVersion: 1.0.0
 metadata:
   name: test-devfile
+projects:
+  -
+    name: nodejs-web-app
+    source:
+      type: git
+      location: "https://github.com/che-samples/web-nodejs-sample.git"
 components:
   - type: dockerimage
     image: quay.io/eclipse/che-nodejs10-ubi:nightly
     endpoints:
-      - name: 'nodejs'
+      - name: "3000/tcp"
         port: 3000
     alias: runtime
     env:
@@ -19,4 +25,4 @@ commands:
       - type: exec
         component: runtime
         command: "npm install && nodemon app.js"
-        workdir: ${CHE_PROJECTS_ROOT}/app
+        workdir: ${CHE_PROJECTS_ROOT}/nodejs-web-app/app
