--- a/.travis.yml
+++ b/.travis.yml
@@ -168,7 +168,7 @@ jobs:
     # Run devfile integration test on Kubernetes cluster    
     - <<: *base-test
       stage: test
-      name: "devfile catalog, watch, push and delete command integration tests on kubernetes cluster"
+      name: "devfile catalog, watch, push, delete and create command integration tests on kubernetes cluster"
       env:
         - MINIKUBE_WANTUPDATENOTIFICATION=false
         - MINIKUBE_WANTREPORTERRORPROMPT=false
@@ -193,3 +193,4 @@ jobs:
         - travis_wait make test-cmd-devfile-watch
         - travis_wait make test-cmd-devfile-push
         - travis_wait make test-cmd-devfile-delete
+        - travis_wait make test-cmd-devfile-create
