--- a/tests/examples/source/devfiles/nodejs/devfile-without-devbuild.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-without-devbuild.yaml
@@ -10,19 +10,19 @@ projects:
 components:
   - type: dockerimage
     image: quay.io/eclipse/che-nodejs10-ubi:nightly
+    endpoints:
+      - name: "3000/tcp"
+        port: 3000
     alias: runtime
+    env:
+      - name: FOO
+        value: "bar"
     memoryLimit: 1024Mi
     mountSources: true
 commands:
-  - name: devbuild
-    actions:
-      - type: exec
-        component: runtime
-        command: "npm install"
-        workdir: ${CHE_PROJECTS_ROOT}/nodejs-web-app/app
   - name: devrun
     actions:
       - type: exec
         component: runtime
-        command: "nodemon app.js"
+        command: "npm install && nodemon app.js"
         workdir: ${CHE_PROJECTS_ROOT}/nodejs-web-app/app
