--- a/openshift-ci/build-root/Dockerfile
+++ b/openshift-ci/build-root/Dockerfile
@@ -2,6 +2,7 @@
 
 FROM registry.svc.ci.openshift.org/openshift/release:golang-1.13
 
-RUN yum -y install make wget gcc git httpd-tools
+RUN yum -y install make wget gcc git httpd-tools docker
+RUN sudo systemctl start docker
 
 RUN mkdir -p /tmp/secret
