Adding func tests

--- a/tests/examples/source/devfiles/nodejs/devfile-with-volumes.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-with-volumes.yaml
@@ -33,6 +33,12 @@ components:
       - name: myvol2
         containerPath: /data2
 commands:
+  - name: devinit
+    actions:
+      - type: exec
+        component: runtime
+        command: "echo init >> myfile-init.log"
+        workdir: /data
   - name: devbuild
     actions:
       - type: exec
