--- a/.travis.yml
+++ b/.travis.yml
@@ -151,6 +151,8 @@ jobs:
         - make bin
         - sudo cp odo /usr/bin
         - travis_wait make test-cmd-docker-devfile-push
+        - travis_wait make test-cmd-docker-devfile-url
+
     
     # Run devfile integration test on Kubernetes cluster    
     - <<: *base-test
