--- a/.travis.yml
+++ b/.travis.yml
@@ -111,7 +111,7 @@ jobs:
 
     - <<: *base-test
       stage: test
-      name: "watch, storage, app, project, push, devfile catalog, devfile create, devfile push, devfile delete command integration tests"
+      name: "watch, storage, app, project, push, devfile catalog, devfile create, devfile push, devfile delete, devfile registry command integration tests"
       script:
         - ./scripts/oc-cluster.sh
         - make bin
@@ -127,6 +127,7 @@ jobs:
         - travis_wait make test-cmd-devfile-push
         - travis_wait make test-cmd-devfile-watch
         - travis_wait make test-cmd-devfile-delete
+        - travis_wait make test-cmd-devfile-registry
         - odo logout
 
     - <<: *base-test
