--- a/.travis.yml
+++ b/.travis.yml
@@ -152,6 +152,7 @@ jobs:
         - sudo cp odo /usr/bin
         - travis_wait make test-cmd-docker-devfile-push
         - travis_wait make test-cmd-docker-devfile-url
+        - travis_wait make test-cmd-docker-devfile-catalog
 
     
     # Run devfile integration test on Kubernetes cluster    
