--- a/.travis.yml
+++ b/.travis.yml
@@ -173,7 +173,7 @@ jobs:
     # Run devfile integration test on Kubernetes cluster    
     - <<: *base-test
       stage: test
-      name: "devfile catalog and watch command integration tests on kubernetes cluster"
+      name: "devfile catalog, watch, push command integration tests on kubernetes cluster"
       before_script:
         # Download kubectl, a cli tool for accessing Kubernetes cluster
         - curl -Lo kubectl https://storage.googleapis.com/kubernetes-release/release/v1.16.0/bin/linux/amd64/kubectl && chmod +x kubectl && sudo mv kubectl /usr/local/bin/
@@ -190,3 +190,4 @@ jobs:
         - export KUBERNETES=true
         - travis_wait make test-cmd-devfile-catalog
         - travis_wait make test-cmd-devfile-watch
+        - travis_wait make test-cmd-devfile-push
