Update the site script, documentation, remove blog / changelog
**What type of PR is this?**

/kind documentation
[skip ci]

**What does does this PR do / why we need it**:

- Updates the synchronization script
- Update the documentation on the documentation (hah!) with README.md on
how to run the sync script
- Gets rid of `CHANGELOG` for now

**Which issue(s) this PR fixes**:

N/A

**How to test changes / Special notes to the reviewer**:

N/A

--- a/_config.yml
+++ b/_config.yml
@@ -10,14 +10,12 @@ doks:
         nav:
             - item_name: Community
               item_url: '/docs/community'
-            - item_name: Changelog
-              item_url: '/docs/changelog'
     footer:
         content:
             logo:
                 text: odo
                 image:
-            copyright: Copyright &copy; 2020. - Red Hat, Inc.
+            copyright: Copyright &copy; 2020 Red Hat, Inc.
         social_list:
             - network_name: github
               profile_url: 'https://github.com/openshift/odo'
