Adding init command capability to devfiles (#2907)
* Initial commit

* Fix devfile command loop

* Add initCommmand to common test

* Refactored order of command code

* Fix getcommands and add test

* Cleaning up function

* Fixed unfinished unit tests

* Better clarified titles of tests

* Adding func tests

* Addressed requested changes

* Dev init should only run once

* Added -f flag to push test

* Requested changes

* Fixed gofmt issue

* Requested changes

* Reverted devfile command name change

* Requested changes

* Adding init-command flag

* Updated execDevfile to fit merged changes

* Removed unused struct

* Added additional check to test

Co-authored-by: Enrique Lacal Bereslawski <Enrique.Lacal.Bereslawski@ibm.com>

--- a/tests/examples/source/devfiles/nodejs/devfile-with-volumes.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-with-volumes.yaml
@@ -33,13 +33,19 @@ components:
       - name: myvol2
         containerPath: /data2
 commands:
-  - name: devbuild
+  - name: devInit
+    actions:
+      - type: exec
+        component: runtime
+        command: "echo init >> myfile-init.log"
+        workdir: /data
+  - name: devBuild
     actions:
       - type: exec
         component: runtime
         command: "echo hello >> myfile.log"
         workdir: /data
-  - name: devrun
+  - name: devRun
     actions:
       - type: exec
         component: runtime2
