Change manifest format (#84)
* Start the process by changing the configuration and updating the parser to support the new format.

* Tests now passing.

All manifest examples are now changed to support the new format.

* Validate uniqueness of service urls.

* * Fix broken tests
* envBuilder to visit Service (Service () signature was updated)

Co-authored-by: William Tam <email.wtam@gmail.com>

--- a/pkg/pipelines/config/testdata/duplicate_application.yaml
+++ b/pkg/pipelines/config/testdata/duplicate_application.yaml
@@ -4,12 +4,15 @@ environments:
       integration:
         template: dev-ci-template
         binding: dev-ci-binding
+    services:
+      - name: app-1-service-http
+      - name: app-1-service-metrics
+      - name: app-2-service
     apps:
       - name: my-app-1 # Application my-app-1
         services:
-          - name: app-1-service-http
-          - name: app-1-service-metrics
+          - app-1-service-http
+          - app-1-service-metrics
       - name: my-app-1 # Duplicate application my-app-1 (invalid)
         services:
-          - name: app-2-service
-   
+          - app-2-service
