--- a/pkg/pipelines/config/testdata/example2.yaml
+++ b/pkg/pipelines/config/testdata/example2.yaml
@@ -1,10 +1,13 @@
 environments:
   - name: development
+    services:
+      - name: app-1-service-http
+        source_url: https://github.com/myproject/myservice.git
+      - name: app-1-service-metrics
     apps:
       - name: my-app-1
         services:
-          - name: app-1-service-http
-            source_url: https://github.com/myproject/myservice.git
-          - name: app-1-service-metrics
+          - app-1-service-http
+          - app-1-service-metrics
   - name: tst-cicd
     cicd: true
