--- a/pkg/pipelines/config/testdata/valid_manifest.yaml
+++ b/pkg/pipelines/config/testdata/valid_manifest.yaml
@@ -4,13 +4,14 @@ environments:
       integration:
         template: dev-ci-template
         binding: dev-ci-binding
+    services:
+      - name: app-1-service-http
+        source_url: https://github.com/myproject/myservice.git
+        webhook:
+          secret:
+            name: app-1-secret
+            namespace: app-1-secret-ns
     apps:
       - name: my-app-1
         services:
-          - name: app-1-service-http
-            source_url: https://github.com/myproject/myservice.git
-            webhook:
-              secret:
-                name: app-1-secret
-                namespace: app-1-secret-ns
-
+          - app-1-service-http
