--- a/pkg/pipelines/config/testdata/missing_fields_error.yaml
+++ b/pkg/pipelines/config/testdata/missing_fields_error.yaml
@@ -1,11 +1,13 @@
 environments:
   - name: development
+    services:
+      - name: service-1
+        source_url: https://github.com/myproject/myservice.git
+        webhook:
+          secret:       # secret is missing 
+        pipelines:
+          integration:  # templates and bindings are missing
     apps:
       - name: app-1
         services:
-          - name: service-1
-            source_url: https://github.com/myproject/myservice.git
-            webhook:
-              secret:       # secret is missing 
-            pipelines:
-              integration:  # templates and bindings are missing
+          - service-1
