--- a/pkg/pipelines/config/testdata/name_error.yaml
+++ b/pkg/pipelines/config/testdata/name_error.yaml
@@ -4,20 +4,24 @@ environments:
       integration:
         template: dev-ci-template
         binding: dev-ci-binding
-    apps:
-      - name: app-1$.       # invalid name
-        services:
-          - name:           # invalid name
-            source_url: https://github.com/myproject/myservice.git
-            webhook:
-              secret:
-                name: webhook-secret
-                namespace: webhook-secret-key
-            pipelines:
+    services:
+      - name: testing
+        source_url: https://github.com/myproject/myservice1.git
+      - name:           # invalid name
+        source_url: https://github.com/myproject/myservice2.git
+        webhook:
+          secret:
+            name: webhook-secret
+            namespace: webhook-secret-key
+        pipelines:
               integration:
                 template: dev-ci-template
                 binding:    # invalid name
-  - name: test)cicd         # invalid name
+    apps:
+      - name: app-1$.       # invalid name
+        services:
+          - testing
+  - name: test)cicd     # invalid name
     cicd: true
   - name: test-argocd
     argo: true
